# webexe

./: .gitignore  README.md  builder.py  pushandpip.ps1  pyproject.toml  webexe.toml
webexe/: __init__.py  builder.py  cli.py
webexe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
